--- a/backend/views/admin/novedades.hbs
+++ b/backend/views/admin/novedades.hbs
@@ -17,7 +17,7 @@
         <div class="col">
 
             <div align="right">
-                <p>¡Hola {{ usuario }}!<a href="/admin/login/logout" class="btn btn-dark">Cerrar Sesión <i
+                <p>¡Hola <b>{{ usuario }}</b>!<a href="/admin/login/logout" class="btn btn-dark">Cerrar Sesión <i
                             class="fa fa-sign-out"></i></a></p>
             </div>
 
